--- a/ic-71303/package.json
+++ b/ic-71303/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "flowbite-react": "^0.10.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
