--- a/ic-71303/package.json
+++ b/ic-71303/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
